--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                 <nav class="site-nav">
                     <ul class="main-menu menu"><li class="menu-item menu-item-home"><a href="/" rel="section"><i class="fa fa-home fa-fw"></i>首页</a></li></ul>
-                     <ul class="main-menu menu"><li class="menu-item menu-item-home"><a href="https://zlibrary-tdbox.github.io/p/z-library.html" rel="section"><i class="fa fa-home fa-fw"></i>zlibrary入口</a></li></ul>
+                    
                 </nav>
             </header>
 
@@ -237,6 +237,8 @@
                 <span class="with-love"><i class="fa fa-heart"></i></span>
                 <span class="author" itemprop="copyrightHolder">TD导航</span>
             </div>
+             <a class="btn" href="https://zlibrary-tdbox.github.io/p/z-library.htmll" rel="contents">zlibrary入口;</a>
+            
         </div>
     </footer>
 
