--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <span class="with-love"><i class="fa fa-heart"></i></span>
                 <span class="author" itemprop="copyrightHolder">TD导航</span>
             </div>
-             <a class="btn" href="https://zlibrary-tdbox.github.io/p/z-library.htmll" rel="contents">zlibrary入口;</a>
+             <a href="https://zlibrary-tdbox.github.io/p/z-library.htmll" rel="contents">zlibrary入口</a>
             
         </div>
     </footer>
