--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <div class="site-meta">
                         <a href="/" class="brand" rel="start"><i class="logo-line"></i><h1 class="site-title">TD导航(tdboxs.cn)</h1><i class="logo-line"></i></a>
                         <p class="site-subtitle" itemprop="description"></p>
+                        日常更新Z-library最新官网/镜像入口，保存书签以便获取最新网址</p>
                     </div>
                 </div>
 
