--- a/p/yinghe.html
+++ b/p/yinghe.html
@@ -107,9 +107,9 @@
                     <a href="/" class="brand" rel="start">
                         <i class="logo-line"></i>
                         <p class="site-title">TD导航(www.tdboxs.cn)</p>
-                        <i class="logo-line"></i>
-                    </a>
-                    <p class="site-subtitle" itemprop="description" style="opacity: 1; top: 0;">关于Z-library、安娜的档案、电子书资源网站</p>
+                        <i class="logo-line"></i> </a>
+                       <p class="site-subtitle" itemprop="description"></p>
+                        日常更新Z-library最新官网/镜像入口，保存书签以便获取最新网址</p>
                 </div>
             </div>
 
