--- a/p/yinghe.html
+++ b/p/yinghe.html
@@ -108,8 +108,7 @@
                         <i class="logo-line"></i>
                         <p class="site-title">TD导航(www.tdboxs.cn)</p>
                         <i class="logo-line"></i> </a>
-                       <p class="site-subtitle" itemprop="description"></p>
-                        日常更新Z-library最新官网/镜像入口，保存书签以便获取最新网址</p>
+                        <p class="site-subtitle" itemprop="description" style="opacity: 1; top: 0;">关于Z-library、安娜的档案、电子书资源网站</p>
                 </div>
             </div>
 
