--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
                 <span class="author" itemprop="copyrightHolder">TD导航</span>
             </div>
             <div class="links">
-    <a href="https://zlibrary-tdbox.github.io/p/z-library.html" target="_blank" rel="noopener noreferrer">zlibrary入口</a>
-    <a href="https://zlibrary-tdbox.github.io/p/jiumo-search.html" target="_blank" rel="noopener noreferrer">鸠摩搜书入口</a>
+    <a href="https://zlibrary-tdbox.github.io/p/z-library.html" target="_blank">zlibrary入口</a>
 </div>   
         </div>
     </footer>
